--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -23,18 +23,19 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <% if user_signed_in? %>
           <li>
-          <%= link_to 'Edit Profile', edit_user_registration_path, class: "nav-link" %>
+          <%= link_to "Edit #{current_user.username}", edit_user_registration_path, class: "nav-link" %>
         </li>
         <li>
-          <%= link_to 'Sign Out', destroy_user_session_path, class: "nav-link" %>
+          <%= link_to 'Sign Out', destroy_user_session_path, class: "nav-link", data: {turbo_method: :delete} %>
         </li>
-        <% end %>
+        <% else %>
         <li>
           <%= link_to 'Sign In', new_user_session_path, class: "nav-link" %>
         </li>
         <li>
           <%= link_to 'Sign Up', new_user_registration_path, class: "nav-link" %>
         </li>
+        <% end %>
       </ul>
     </div>
   </div>
