Corrected Nav bar titles

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -26,14 +26,14 @@
           <%= link_to "Edit #{current_user.username}", edit_user_registration_path, class: "nav-link" %>
         </li>
         <li>
-          <%= link_to 'Sign Out', destroy_user_session_path, class: "nav-link", data: {turbo_method: :delete} %>
+          <%= link_to 'Sign out', destroy_user_session_path, class: "nav-link", data: { turbo_method: :delete } %>
         </li>
         <% else %>
         <li>
-          <%= link_to 'Sign In', new_user_session_path, class: "nav-link" %>
+          <%= link_to 'Sign in', new_user_session_path, class: "nav-link" %>
         </li>
         <li>
-          <%= link_to 'Sign Up', new_user_registration_path, class: "nav-link" %>
+          <%= link_to 'Sign up', new_user_registration_path, class: "nav-link" %>
         </li>
         <% end %>
       </ul>
