--- a/app/views/users/liked.html.erb
+++ b/app/views/users/liked.html.erb
@@ -26,6 +26,7 @@
   </div>
 </div>
 
-<% current_user.own_photos.each do |photo| %>
+
+<% @user.liked_photos.each do |photo| %>
 <%= render "shared/photo", photo: photo %>
 <% end %>
